compute.tf
resource "aws_instance" "api" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.public.id
  iam_instance_profile   = aws_iam_instance_profile.ec2_profile.name
  vpc_security_group_ids = [aws_security_group.public_web.id]
  monitoring             = true

  user_data = base64encode(templatefile("${path.module}/templates/userdata.sh", {
  db_user            = var.db_user
  backup_bucket_name = var.backup_bucket_name
}))

  user_data_replace_on_change = false

  root_block_device {
    volume_type           = "gp3"
    volume_size           = 8
    delete_on_termination = true
  }

  tags = {
    Name = "${var.project_name}-api"
  }
}

resource "aws_eip" "api" {
  instance = aws_instance.api.id
  domain   = "vpc"

  tags = {
    Name = "${var.project_name}-eip"
  }
}
